# OpenCV_Projects

./: CMakeLists.txt  README.md  build_solution.bat
colorspace/: CMakeLists.txt
colorspace/data/: output.pgm  outputpng.pgm  regionGrow.m
colorspace/inc/: colorspace.hpp
colorspace/src/: main.cpp
core/: CMakeLists.txt
core/inc/: core.hpp
core/src/: core.cpp
debluring/: CMakeLists.txt
debluring/inc/: debluring.hpp
debluring/src/: debluring.cpp
dnn/: CMakeLists.txt
lib/: opencv_aruco343d.exp  opencv_bgsegm343d.exp  opencv_bioinspired343d.exp  opencv_calib3d343d.exp  opencv_ccalib343d.exp  opencv_core343d.exp  opencv_datasets343d.exp  opencv_dnn343d.exp  opencv_dnn_objdetect343d.exp  opencv_dpm343d.exp  opencv_face343d.exp  opencv_features2d343d.exp  opencv_flann343d.exp  opencv_fuzzy343d.exp  opencv_hfs343d.exp  opencv_highgui343d.exp  opencv_img_hash343d.exp  opencv_imgcodecs343d.exp  opencv_imgproc343d.exp  opencv_line_descriptor343d.exp  opencv_ml343d.exp  opencv_objdetect343d.exp  opencv_optflow343d.exp  opencv_phase_unwrapping343d.exp  opencv_photo343d.exp  opencv_plot343d.exp  opencv_reg343d.exp  opencv_rgbd343d.exp  opencv_saliency343d.exp  opencv_shape343d.exp  opencv_stereo343d.exp  opencv_stitching343d.exp  opencv_structured_light343d.exp  opencv_superres343d.exp  opencv_surface_matching343d.exp  opencv_text343d.exp  opencv_tracking343d.exp  opencv_video343d.exp  opencv_videoio343d.exp  opencv_videostab343d.exp  (+4 more)
